--- a/dynamic_programming.ipynb
+++ b/dynamic_programming.ipynb
@@ -504,6 +504,124 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Algorithm:\n",
+    "Let the given binary matrix be M[R][C]. The idea of the algorithm is to construct an auxiliary size matrix S[][] in which each entry S[i][j] represents size of the square sub-matrix with all 1s including M[i][j] where M[i][j] is the rightmost and bottommost entry in sub-matrix.\n",
+    "\n",
+    "- Construct a sum matrix S[R][C] for the given M[R][C].\n",
+    "     a)\tCopy first row and first columns as it is from M[][] to S[][]\n",
+    "     b)\tFor other entries, use following expressions to construct S[][]\n",
+    "         If M[i][j] is 1 then\n",
+    "            S[i][j] = min(S[i][j-1], S[i-1][j], S[i-1][j-1]) + 1\n",
+    "         Else /*If M[i][j] is 0*/\n",
+    "            S[i][j] = 0\n",
+    "- Find the maximum entry in S[R][C]\n",
+    "- Using the value and coordinates of maximum entry in S[i], print \n",
+    "   sub-matrix of M[][]\n",
+    "For the given M[R][C] in above example, constructed S[R][C] would be:\n",
+    "\n",
+    "   0  1  1  0  1\n",
+    "   \n",
+    "   1  1  0  1  0\n",
+    "   \n",
+    "   0  1  1  1  0\n",
+    "   \n",
+    "   1  1  2  2  0\n",
+    "   \n",
+    "   1  2  2  3  1\n",
+    "   \n",
+    "   0  0  0  0  0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "matrix =          [[0, 1, 1, 0, 1], \n",
+    "                   [1, 1, 0, 1, 0], \n",
+    "                   [0, 1, 1, 1, 0],\n",
+    "                   [1, 1, 1, 1, 0],\n",
+    "                   [1, 1, 1, 1, 1],\n",
+    "                   [0, 0, 0, 0, 0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([4]), array([3])) 3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "def sub_maxtrix(matrix):\n",
+    "    matrix_len = len(matrix)\n",
+    "    cache = np.zeros((matrix_len+1, matrix_len+1))\n",
+    "    \n",
+    "    for i in range(1, len(matrix)):\n",
+    "        for j in range(1, len(matrix[i])):\n",
+    "            if matrix[i][j] == 1:\n",
+    "                cache[i][j] = min(cache[i][j-1], cache[i-1][j-1], cache[i-1][j]) + 1\n",
+    "            else:\n",
+    "                cache[i][j] = 0\n",
+    "    max_num = np.max(cache)\n",
+    "    return np.where(cache == max_num), max_num\n",
+    "a, b = sub_maxtrix(matrix)        \n",
+    "print(a, b)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([1]), array([1]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = [[1,2], [3,4]]\n",
+    "b = np.array(a)\n",
+    "print(np.where(b == np.max(b)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([4]), array([3]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -529,7 +647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
