--- a/dynamic_programming.ipynb
+++ b/dynamic_programming.ipynb
@@ -858,16 +858,89 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def edit_distance(first, second, m, n):\n",
+    "    if m == 0:\n",
+    "        return n\n",
+    "    if n == 0:\n",
+    "        return m\n",
+    "    \n",
+    "    if first[m-1] == second[n-1]:\n",
+    "        return edit_distance(first, second, m-1, n-1)\n",
+    "    \n",
+    "    return 1 + min(edit_distance(first, second, m-1, n), edit_distance(first, second, m-1, n-1), edit_distance(first, second, m, n-1))\n",
+    "\n",
+    "str1 = \"sunday\"\n",
+    "str2 = \"saturday\"\n",
+    "print (edit_distance(str1, str2, len(str1), len(str2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list assignment index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-8764fa86fee8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0mstr2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"saturday\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0medit_distance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstr2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-7-8764fa86fee8>\u001b[0m in \u001b[0;36medit_distance\u001b[0;34m(first, second, m, n)\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m                 \u001b[0mcache\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mj\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m             \u001b[1;32melif\u001b[0m \u001b[0mj\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m                 \u001b[0mcache\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list assignment index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "def edit_distance(first, second, m, n):\n",
+    "    if first == second:\n",
+    "        return 0\n",
+    "    cache = [ [None for _ in range(m + 1)] for _ in range(n + 1)]\n",
+    "    \n",
+    "    \n",
+    "    for i in range(m + 1):\n",
+    "        for j in range(n + 1):\n",
+    "            if i==0:\n",
+    "                cache[i][j] = j\n",
+    "            elif j == 0:\n",
+    "                cache[i][j] = i\n",
+    "            elif(first[i-1] == second[j-1]):\n",
+    "                cache[i][j] = cache[i-1][j-1]\n",
+    "            else:\n",
+    "                cache[i][j] = 1 + min(cache[i-1][j], cache[i][j-1], cache[i-1][j-1])\n",
+    "                \n",
+    "    return cache[-1][-1]\n",
+    "\n",
+    "str1 = \"sunday\"\n",
+    "str2 = \"saturday\"\n",
+    " \n",
+    "print(edit_distance(str1, str2, len(str1), len(str2)))\n",
+    "            \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "def edit_distance(first, second):\n",
-    "    for i, char in first:\n",
-    "        "
-   ]
+   "source": []
   }
  ],
  "metadata": {
