--- a/dynamic_programming.ipynb
+++ b/dynamic_programming.ipynb
@@ -888,19 +888,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list assignment index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-8764fa86fee8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0mstr2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"saturday\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0medit_distance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstr2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-7-8764fa86fee8>\u001b[0m in \u001b[0;36medit_distance\u001b[0;34m(first, second, m, n)\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m                 \u001b[0mcache\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mj\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m             \u001b[1;32melif\u001b[0m \u001b[0mj\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m                 \u001b[0mcache\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list assignment index out of range"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
      ]
     }
    ],
@@ -909,7 +904,7 @@
     "def edit_distance(first, second, m, n):\n",
     "    if first == second:\n",
     "        return 0\n",
-    "    cache = [ [None for _ in range(m + 1)] for _ in range(n + 1)]\n",
+    "    cache = [ [None for _ in range(n + 1)] for _ in range(m + 1)]\n",
     "    \n",
     "    \n",
     "    for i in range(m + 1):\n",
@@ -931,6 +926,79 @@
     "print(edit_distance(str1, str2, len(str1), len(str2)))\n",
     "            \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dynamic Programming | Set 13 (Cutting a Rod)\n",
+    "Given a rod of length n inches and an array of prices that contains prices of all pieces of size smaller than n. Determine the maximum value obtainable by cutting up the rod and selling the pieces. For example, if length of the rod is 8 and the values of different pieces are given as following, then the maximum obtainable value is 22 (by cutting in two pieces of lengths 2 and 6)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "length   | 1   2   3   4   5   6   7   8  \n",
+    "--------------------------------------------\n",
+    "price    | 1   5   8   9  10  17  17  20\n",
+    "\n",
+    "And if the prices are as following, then the maximum obtainable value is 24 (by cutting in eight pieces of length 1)\n",
+    "\n",
+    "length   | 1   2   3   4   5   6   7   8  \n",
+    "--------------------------------------------\n",
+    "price    | 3   5   8   9  10  17  17  20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 0\n",
+      "3 0\n",
+      "3 1\n",
+      "4 0\n",
+      "4 1\n",
+      "4 2\n",
+      "5 0\n",
+      "5 1\n",
+      "5 2\n",
+      "5 3\n",
+      "6 0\n",
+      "6 1\n",
+      "6 2\n",
+      "6 3\n",
+      "6 4\n",
+      "7 0\n",
+      "7 1\n",
+      "7 2\n",
+      "7 3\n",
+      "7 4\n",
+      "7 5\n",
+      "[1, 5, 8, 10, 13, 17, 18, 22]\n",
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cutting_rod(price_list, length):\n",
+    "    cache = [0 for _ in range(length)]  \n",
+    "    for i, max_price in enumerate(cache):\n",
+    "        if i < len(price_list):\n",
+    "            cache[i] = price_list[i]\n",
+    "        for j in range(i - 1):\n",
+    "            print(i, j)\n",
+    "            cache[i] = max(cache[i], cache[j] + cache[i-j-1])\n",
+    "    print(cache)\n",
+    "    return cache[-1]\n",
+    "arr = [1, 5, 8, 9, 10, 17, 17, 20]\n",
+    "print(cutting_rod(arr,8))"
    ]
   },
   {
