--- a/dynamic_programming.ipynb
+++ b/dynamic_programming.ipynb
@@ -953,35 +953,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 0\n",
-      "3 0\n",
-      "3 1\n",
-      "4 0\n",
-      "4 1\n",
-      "4 2\n",
-      "5 0\n",
-      "5 1\n",
-      "5 2\n",
-      "5 3\n",
-      "6 0\n",
-      "6 1\n",
-      "6 2\n",
-      "6 3\n",
-      "6 4\n",
-      "7 0\n",
-      "7 1\n",
-      "7 2\n",
-      "7 3\n",
-      "7 4\n",
-      "7 5\n",
-      "[1, 5, 8, 10, 13, 17, 18, 22]\n",
       "22\n"
      ]
     }
@@ -993,12 +971,73 @@
     "        if i < len(price_list):\n",
     "            cache[i] = price_list[i]\n",
     "        for j in range(i - 1):\n",
-    "            print(i, j)\n",
     "            cache[i] = max(cache[i], cache[j] + cache[i-j-1])\n",
-    "    print(cache)\n",
     "    return cache[-1]\n",
     "arr = [1, 5, 8, 9, 10, 17, 17, 20]\n",
     "print(cutting_rod(arr,8))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dynamic Programming | Set 25 (Subset Sum Problem)\n",
+    "Given a set of non-negative integers, and a value sum, determine if there is a subset of the given set with sum equal to given sum."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Examples: set[] = {3, 34, 4, 12, 5, 2}, sum = 9\n",
+    "Output:  True  //There is a subset (4, 5) with sum 9."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Let isSubSetSum(int set[], int n, int sum) be the function to find whether there is a subset of set[] with sum equal to sum. n is the number of elements in set[].\n",
+    "The isSubsetSum problem can be divided into two subproblems\n",
+    "…a) Include the last element, recur for n = n-1, sum = sum – set[n-1]\n",
+    "…b) Exclude the last element, recur for n = n-1.\n",
+    "If any of the above the above subproblems return true, then return true. \n",
+    "Following is the recursive formula for isSubsetSum() problem.\n",
+    "isSubsetSum(set, n, sum) = isSubsetSum(set, n-1, sum) || \n",
+    "                           isSubsetSum(set, n-1, sum-set[n-1])\n",
+    "Base Cases:\n",
+    "isSubsetSum(set, n, sum) = false, if sum > 0 and n == 0\n",
+    "isSubsetSum(set, n, sum) = true, if sum == 0 \n",
+    "Following is naive recursive implementation that simply follows the recursive structure mentioned above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def subset_sum(num, n, set):\n",
+    "    if num == 0:\n",
+    "        return True\n",
+    "    if n < 0:\n",
+    "        return False\n",
+    "    if set[n] > num:\n",
+    "        return subset_sum(num, n-1, set)\n",
+    "    return subset_sum(num, n-1, set) or subset_sum(num - set[n], n-1, set)\n",
+    "\n",
+    "subset_sum(6, 5, [3, 34, 4, 12, 5, 2])"
    ]
   },
   {
