--- a/dynamic_programming.ipynb
+++ b/dynamic_programming.ipynb
@@ -1041,6 +1041,106 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Minimum number of jumps to reach end\n",
+    "Given an array of integers where each element represents the max number of steps that can be made forward from that element. Write a function to return the minimum number of jumps to reach the end of the array (starting from the first element). If an element is 0, then cannot move through that element."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Input: arr[] = {1, 3, 5, 8, 9, 2, 6, 7, 6, 8, 9}\n",
+    "Output: 3 (1-> 3 -> 8 ->9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First element is 1, so can only go to 3. Second element is 3, so can make at most 3 steps eg to 5 or 8 or 9."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def min_jump(arr):\n",
+    "    jump_step = [arr[0]]\n",
+    "    for i,value in enumerate(arr):\n",
+    "        if i > jump_step[i]:\n",
+    "            return 0\n",
+    "        jump_step.append(i + max(arr[i:jump_step[i]+1]))\n",
+    "        if len(arr) <= jump_step[i]:\n",
+    "            return i\n",
+    "min_jump([1, 3, 5, 8, 9, 2, 6, 7, 6, 8, 9])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dynamic Programming | Set 34 (Assembly Line Scheduling)\n",
+    "A car factory has two assembly lines, each with n stations. A station is denoted by Si,j where i is either 1 or 2 and indicates the assembly line the station is on, and j indicates the number of the station. The time taken per station is denoted by ai,j. Each station is dedicated to some sort of work like engine fitting, body fitting, painting and so on. So, a car chassis must pass through each of the n stations in order before exiting the factory. The parallel stations of the two assembly lines perform the same task. After it passes through station Si,j, it will continue to station Si,j+1 unless it decides to transfer to the other line. Continuing on the same line incurs no extra cost, but transferring from line i at station j – 1 to station j on the other line takes time ti,j. Each assembly line takes an entry time ei and exit time xi which may be different for the two lines. Give an algorithm for computing the minimum time it will take to build a car chassis.\n",
+    "The below figure presents the problem in a clear picture:\n",
+    "http://www.geeksforgeeks.org/wp-content/uploads/Figure-1-1024x767.jpg![image.png](attachment:image.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dynamic Programming | Set 14 (Maximum Sum Increasing Subsequence)\n",
+    "Given an array of n positive integers. Write a program to find the sum of maximum sum subsequence of the given array such that the intgers in the subsequence are sorted in increasing order. For example, if input is {1, 101, 2, 3, 100, 4, 5}, then output should be 106 (1 + 2 + 3 + 100), if the input array is {3, 4, 5, 10}, then output should be 22 (3 + 4 + 5 + 10) and if the input array is {10, 5, 4, 3}, then output should be 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 7, 12, 22]\n",
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "#naive approach\n",
+    "def max_sum(arr):\n",
+    "    max_arr = [i for i in arr]\n",
+    "    for i, value in enumerate(arr):\n",
+    "        temp = value\n",
+    "        for j in range(0, i):\n",
+    "            if value > arr[j]:\n",
+    "                if max_arr[j] + value >temp:\n",
+    "                    temp = max_arr[j] + value\n",
+    "        max_arr[i] = temp\n",
+    "    print(max_arr)\n",
+    "    return max(max_arr)\n",
+    "print(max_sum([3, 4, 5, 10]))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
