--- a/dynamic_programming.ipynb
+++ b/dynamic_programming.ipynb
@@ -1125,7 +1125,7 @@
     }
    ],
    "source": [
-    "#naive approach\n",
+    "#not naive approach\n",
     "def max_sum(arr):\n",
     "    max_arr = [i for i in arr]\n",
     "    for i, value in enumerate(arr):\n",
@@ -1138,6 +1138,172 @@
     "    print(max_arr)\n",
     "    return max(max_arr)\n",
     "print(max_sum([3, 4, 5, 10]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dynamic Programming | Set 20 (Maximum Length Chain of Pairs)\n",
+    "You are given n pairs of numbers. In every pair, the first number is always smaller than the second number. A pair (c, d) can follow another pair (a, b) if b < c. Chain of pairs can be formed in this fashion. Find the longest chain which can be formed from a given set of pairs. Source: Amazon Interview | Set 2\n",
+    "For example, if the given pairs are {{5, 24}, {39, 60}, {15, 28}, {27, 40}, {50, 90} }, then the longest chain that can be formed is of length 3, and the chain is {{5, 24}, {27, 40}, {50, 90}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def max_len_chain(list):\n",
+    "    cache = [1 for _ in list]\n",
+    "    cache[0] = 1\n",
+    "    sorted(list)\n",
+    "    for i in range(1, len(list)):\n",
+    "        for j in range(i, -1, -1):\n",
+    "            if list[i][0] > list[j][1]:\n",
+    "                cache[i] = cache[j] + 1\n",
+    "                break\n",
+    "    return max(cache)\n",
+    "\n",
+    "print(max_len_chain([[5, 24], [39, 60], [15, 28], [27, 40], [50, 90] ]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dynamic Programming | Set 29 (Longest Common Substring)\n",
+    "Given two strings ‘X’ and ‘Y’, find the length of the longest common substring. \n",
+    "Examples : "
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Input : X = \"GeeksforGeeks\", y = \"GeeksQuiz\"\n",
+    "Output : 5\n",
+    "The longest common substring is \"Geeks\" and is of\n",
+    "length 5.\n",
+    "\n",
+    "Input : X = \"abcdxyz\", y = \"xyzabcd\"\n",
+    "Output : 4\n",
+    "The longest common substring is \"abcd\" and is of\n",
+    "length 4.\n",
+    "\n",
+    "Input : X = \"zxabcdezy\", y = \"yzabcdezx\"\n",
+    "Output : 6\n",
+    "The longest common substring is \"abcdez\" and is of\n",
+    "length 6."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  0.  0.  1.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  2.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  3.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  4.]\n",
+      " [ 1.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  2.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  3.  0.  0.  0.  0.]]\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#naive approach\n",
+    "import numpy as np\n",
+    "def longest_common(str1, str2):\n",
+    "    cache = np.zeros((len(str1), len(str2)))\n",
+    "    if str1[0] == str2[0]:\n",
+    "        cache[0][0] = 1 \n",
+    "    ret = 0\n",
+    "    for i, char1 in enumerate(str1):\n",
+    "        for j, char2 in enumerate(str2):\n",
+    "            if char1 == char2:\n",
+    "                if j-1>=0:\n",
+    "                    cache[i][j] = cache[i-1][j-1] + 1\n",
+    "                else:\n",
+    "                    cache[i][j] = 1\n",
+    "                    ret = max(ret, cache[i][j])\n",
+    "    print(cache)\n",
+    "    return ret          \n",
+    "print(longest_common(\"abcdxyz\", \"xyzabcd\"))\n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Count all possible paths from top left to bottom right of a mXn matrix\n",
+    "The problem is to count all the possible paths from top left to bottom right of a mXn matrix with the constraints that from each cell you can either move only to right or down"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Python program to count all possible paths \n",
+    "# from top left to bottom right\n",
+    "  \n",
+    "# function to return count of possible paths\n",
+    "# to reach cell at row number m and column\n",
+    "# number n from the topmost leftmost\n",
+    "# cell (cell at 1, 1)\n",
+    "def numberOfPaths(m, n):\n",
+    "   # If either given row number is first\n",
+    "   # or given column number is first\n",
+    "   if(m == 1 or n == 1):\n",
+    "        return 1\n",
+    "   \n",
+    "   # If diagonal movements are allowed\n",
+    "   # then the last addition\n",
+    "   # is required.\n",
+    "   return  numberOfPaths(m-1, n) + numberOfPaths(m, n-1)\n",
+    " \n",
+    "# Driver program to test above function  \n",
+    "m = 3\n",
+    "n = 3\n",
+    "print(numberOfPaths(m, n))\n",
+    " \n",
+    "# This code is contributed by Aditi Sharma"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Program for nth Catalan Number\n",
+    "Catalan numbers are a sequence of natural numbers that occurs in many interesting counting problems like following.\n",
+    "- Count the number of expressions containing n pairs of parentheses which are correctly matched. For n = 3, possible expressions are ((())), ()(()), ()()(), (())(), (()()).\n",
+    "- Count the number of possible Binary Search Trees with n keys (See this)\n",
+    "- Count the number of full binary trees (A rooted binary tree is full if every vertex has either two children or no children) with n+1 leaves.\n",
+    "\n",
+    "See this for more applications. \n",
+    "The first few Catalan numbers for n = 0, 1, 2, 3, … are 1, 1, 2, 5, 14, 42, 132, 429, 1430, 4862, …"
    ]
   },
   {
