--- a/dynamic_programming.ipynb
+++ b/dynamic_programming.ipynb
@@ -1092,7 +1092,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1495,12 +1494,128 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Let “count(n)” be the count of ways to place tiles on a “2 x n” grid, we have following two ways to place first tile.\n",
+    "1) If we place first tile vertically, the problem reduces to “count(n-1)”\n",
+    "2) If we place first tile horizontally, we have to place second tile also horizontally. So the problem reduces to “count(n-2)”\n",
+    "\n",
+    "count(n) = n if n = 1 or n = 2\n",
+    "count(n) = count(n-1) + count(n-2) \n",
+    "'''\n",
+    "def till(num):\n",
+    "    if num < 3:\n",
+    "        return num\n",
+    "    return till(num-1) + till(num-2)\n",
+    "\n",
+    "#dp\n",
+    "\n",
+    "def dp_till(num):\n",
+    "    if num < 3:\n",
+    "        return num\n",
+    "    cache = [None for _ in range(num+1)]\n",
+    "    cache[0:3] = [0, 1, 2]\n",
+    "    \n",
+    "    for i in range(3, num + 1):\n",
+    "        cache[i] = cache[i-1] + cache[i - 2]\n",
+    "    return cache[-1]\n",
+    "\n",
+    "print(dp_till(4))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Count even length binary sequences with same sum of first and second half bits\n",
+    "Given a number n, find count of all binary sequences of length 2n such that sum of first n bits is same as sum of last n bits.\n",
+    "Examples:"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Input:  n = 1\n",
+    "Output: 2\n",
+    "There are 2 sequences of length 2*n, the\n",
+    "sequences are 00 and 11\n",
+    "\n",
+    "Input:  n = 2\n",
+    "Output: 2\n",
+    "There are 6 sequences of length 2*n, the\n",
+    "sequences are 0101, 0110, 1010, 1001, 0000\n",
+    "and 1111"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sequence_count(num):\n",
+    "    cache = [0 for i in range(num+1)]\n",
+    "    cache[0:1] = [0, 1]\n",
+    "    for i in range(2, num+1):\n",
+    "        cache[i] = i*cache[i-1]\n",
+    "    return sum(cache)*2\n",
+    "print(sequence_count(3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Find number of solutions of a linear equation of n variables\n",
+    "Given a linear equation of n variables, find number of non-negative integer solutions of it. For example,let the given equation be “x + 2y = 5”, solutions of this equation are “x = 1, y = 2”, “x = 5, y = 0” and “x = 1. It may be assumed that all coefficients in given equation are positive integers.\n",
+    "Example: "
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Input:  coeff[] = {1, 2}, rhs = 5\n",
+    "Output: 3\n",
+    "The equation \"x + 2y = 5\" has 3 solutions.\n",
+    "(x=3,y=1), (x=1,y=2), (x=5,y=0)\n",
+    "\n",
+    "Input:  coeff[] = {2, 2, 3}, rhs = 4\n",
+    "Output: 3\n",
+    "The equation \"2x + 2y + 3z = 4\"  has 3 solutions.\n",
+    "(x=0,y=2,z=0), (x=2,y=0,z=0), (x=1,y=1,z=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def "
+   ]
   }
  ],
  "metadata": {
