--- a/dynamic_programming.ipynb
+++ b/dynamic_programming.ipynb
@@ -1608,14 +1608,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---$$ 0 1 0 5\n",
+      "1 5\n",
+      "---$$ 0 1 0 4\n",
+      "1 4\n",
+      "---$$ 0 1 0 3\n",
+      "1 3\n",
+      "---$$ 0 1 0 2\n",
+      "1 2\n",
+      "---$$ 0 1 0 1\n",
+      "1 1\n",
+      "hit\n",
+      "---$$ 1 2 0 1\n",
+      "---$$ 1 2 0 2\n",
+      "2 2\n",
+      "hit\n",
+      "---$$ 1 2 0 3\n",
+      "2 3\n",
+      "---$$ 1 2 0 4\n",
+      "2 4\n",
+      "---$$ 1 2 0 5\n",
+      "2 5\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#dummy solution\n",
+    "def find_solution(coeff, rhs, pos):\n",
+    "   # print(\"rhs is: \", rhs)\n",
+    "    if rhs == 0:\n",
+    "        return 1    \n",
+    "    \n",
+    "    if len(coeff) == pos+1:\n",
+    "        if rhs % coeff[-1] == 0:\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return 0\n",
+    "        \n",
+    "    for i, num in enumerate(coeff[pos:]):\n",
+    "        if num <= rhs:\n",
+    "            print(num, rhs)\n",
+    "            result += find_solution(coeff, rhs - num, i)\n",
+    "    \n",
+    "    return result\n",
+    "\n",
+    "print(find_solution((1,2), 5, 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "def "
-   ]
+   "source": []
   }
  ],
  "metadata": {
