--- a/dynamic_programming.ipynb
+++ b/dynamic_programming.ipynb
@@ -1608,34 +1608,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---$$ 0 1 0 5\n",
-      "1 5\n",
-      "---$$ 0 1 0 4\n",
-      "1 4\n",
-      "---$$ 0 1 0 3\n",
-      "1 3\n",
-      "---$$ 0 1 0 2\n",
-      "1 2\n",
-      "---$$ 0 1 0 1\n",
-      "1 1\n",
-      "hit\n",
-      "---$$ 1 2 0 1\n",
-      "---$$ 1 2 0 2\n",
-      "2 2\n",
-      "hit\n",
-      "---$$ 1 2 0 3\n",
-      "2 3\n",
-      "---$$ 1 2 0 4\n",
-      "2 4\n",
-      "---$$ 1 2 0 5\n",
-      "2 5\n",
       "3\n"
      ]
     }
@@ -1652,15 +1631,54 @@
     "            return 1\n",
     "        else:\n",
     "            return 0\n",
-    "        \n",
+    "    \n",
+    "    result = 0        \n",
     "    for i, num in enumerate(coeff[pos:]):\n",
     "        if num <= rhs:\n",
-    "            print(num, rhs)\n",
     "            result += find_solution(coeff, rhs - num, i)\n",
     "    \n",
     "    return result\n",
     "\n",
-    "print(find_solution((1,2), 5, 0))"
+    "print(find_solution((2,2,3), 4, 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 2 [1, 0, 1, 0, 0]\n",
+      "3 2 [1, 0, 1, 0, 0]\n",
+      "4 2 [1, 0, 1, 0, 1]\n",
+      "2 2 [1, 0, 2, 0, 1]\n",
+      "3 2 [1, 0, 2, 0, 1]\n",
+      "4 2 [1, 0, 2, 0, 3]\n",
+      "3 3 [1, 0, 2, 1, 3]\n",
+      "4 3 [1, 0, 2, 1, 3]\n",
+      "[1, 0, 2, 1, 3]\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#dp solution\n",
+    "def find_solution(coeff, rhs):\n",
+    "    cache = [0 for _ in range(rhs+1)]\n",
+    "    cache[0] = 1\n",
+    "    \n",
+    "    for j in coeff:\n",
+    "        for i in range(j, len(cache)):\n",
+    "            if i >= j:\n",
+    "                cache[i] += cache[i - j]\n",
+    "            print(i, j, cache)\n",
+    "\n",
+    "    print(cache)\n",
+    "    return cache[-1]\n",
+    "print(find_solution((2,2,3), 4))            "
    ]
   },
   {
