--- a/dynamic_programming.ipynb
+++ b/dynamic_programming.ipynb
@@ -1682,6 +1682,130 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Bell Numbers (Number of ways to Partition a Set)\n",
+    "Given a set of n elements, find number of ways of partitioning it.\n",
+    "Examples:"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Input:  n = 2\n",
+    "Output: Number of ways = 2\n",
+    "Explanation: Let the set be {1, 2}\n",
+    "            { {1}, {2} } \n",
+    "            { {1, 2} }\n",
+    "\n",
+    "Input:  n = 3\n",
+    "Output: Number of ways = 5\n",
+    "Explanation: Let the set be {1, 2, 3}\n",
+    "             { {1}, {2}, {3} }\n",
+    "             { {1}, {2, 3} }\n",
+    "             { {2}, {1, 3} }\n",
+    "             { {3}, {1, 2} }\n",
+    "             { {1, 2, 3} }. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 0, 0, 0, 0, 0], [1, 0, 0, 0, 0, 0], [0, 1, 0, 0, 0, 0], [0, 0, 1, 0, 0, 0], [0, 0, 0, 1, 0, 0], [0, 0, 0, 0, 0, 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def bell_num(n):\n",
+    "\n",
+    "    cache = [[0 for _ in range(n+1)] for __ in range(n+1)] \n",
+    "    cache[0][0] = 1\n",
+    "    for i in range(1, n):\n",
+    "        cache[i][0] = cache[i-1][i-1]\n",
+    "        for j in range(1, i):\n",
+    "            cache[i][j] = cache[i-1][j-1] + cache[i][j-1]\n",
+    "    print(cache) \n",
+    "bell_num(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 0 1\n",
+      "2 0 1\n",
+      "2 1 2\n",
+      "3 0 1\n",
+      "3 1 3\n",
+      "3 2 3\n",
+      "4 0 1\n",
+      "4 1 4\n",
+      "4 2 6\n",
+      "4 3 4\n",
+      "5 0 1\n",
+      "5 1 5\n",
+      "5 2 10\n",
+      "5 3 10\n",
+      "5 4 5\n",
+      "6 0 1\n",
+      "6 1 6\n",
+      "6 2 15\n",
+      "6 3 20\n",
+      "6 4 15\n",
+      "6 5 6\n",
+      "7 0 1\n",
+      "7 1 7\n",
+      "7 2 21\n",
+      "7 3 35\n",
+      "7 4 35\n",
+      "7 5 21\n",
+      "7 6 7\n",
+      "8 0 1\n",
+      "8 1 8\n",
+      "8 2 28\n",
+      "8 3 56\n",
+      "8 4 70\n",
+      "8 5 56\n",
+      "8 6 28\n",
+      "8 7 8\n",
+      "9 0 1\n",
+      "9 1 9\n",
+      "9 2 36\n",
+      "9 3 84\n",
+      "9 4 126\n",
+      "9 5 126\n",
+      "9 6 84\n",
+      "9 7 36\n",
+      "9 8 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "def C(i, j):\n",
+    "    return int(math.factorial(i)/math.factorial(j)/math.factorial(i-j))\n",
+    "    \n",
+    "for i in range(10):\n",
+    "    for j in range(i):\n",
+    "        print(i, j, C(i, j))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
