--- a/dynamic_programming.ipynb
+++ b/dynamic_programming.ipynb
@@ -1714,14 +1714,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1, 0, 0, 0, 0, 0], [1, 0, 0, 0, 0, 0], [0, 1, 0, 0, 0, 0], [0, 0, 1, 0, 0, 0], [0, 0, 0, 1, 0, 0], [0, 0, 0, 0, 0, 0]]\n"
+      "[[1, 0, 0, 0, 0, 0], [1, 2, 0, 0, 0, 0], [2, 3, 5, 0, 0, 0], [5, 7, 10, 15, 0, 0], [15, 20, 27, 37, 52, 0], [52, 67, 87, 114, 151, 203]]\n"
      ]
     }
    ],
@@ -1730,9 +1730,9 @@
     "\n",
     "    cache = [[0 for _ in range(n+1)] for __ in range(n+1)] \n",
     "    cache[0][0] = 1\n",
-    "    for i in range(1, n):\n",
+    "    for i in range(1, n+1):\n",
     "        cache[i][0] = cache[i-1][i-1]\n",
-    "        for j in range(1, i):\n",
+    "        for j in range(1, i+1):\n",
     "            cache[i][j] = cache[i-1][j-1] + cache[i][j-1]\n",
     "    print(cache) \n",
     "bell_num(5)"
